--- a/style/pdf.css
+++ b/style/pdf.css
@@ -1,45 +1,4 @@
-@font-face {
-  font-family: "Lato";
-  src: url("../fonts/Lato/ttf/lato-regular.ttf") format("truetype");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Lato";
-  src: url("../fonts/Lato/ttf/lato-italic.ttf") format("truetype");
-  font-weight: 400;
-  font-style: italic;
-}
-@font-face {
-  font-family: "Lato";
-  src: url("../fonts/Lato/ttf/lato-bold.ttf") format("truetype");
-  font-weight: 700;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Lato";
-  src: url("../fonts/Lato/ttf/lato-bolditalic.ttf") format("truetype");
-  font-weight: 700;
-  font-style: italic;
-}
-@font-face {
-  font-family: "Lato";
-  src: url("../fonts/Lato/ttf/lato-medium.ttf") format("truetype");
-  font-weight: 500;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Lato";
-  src: url("../fonts/Lato/ttf/lato-semibold.ttf") format("truetype");
-  font-weight: 600;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Lato";
-  src: url("../fonts/Lato/ttf/lato-extrabold.ttf") format("truetype");
-  font-weight: 800;
-  font-style: normal;
-}
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @page {
   margin: 0.5in;
   size: letter;
@@ -58,7 +17,24 @@ footer {
 }
 
 * {
-  font-family: "Lato" !important;
+  font-family: "Inter", sans-serif !important;
+}
+
+html {
+  font-family: "Inter", sans-serif !important;
+  line-height: 1.3em;
+  color: #111 !important;
+  font-size: 13px;
+}
+
+body {
+  font-family: "Inter", sans-serif !important;
+  background: white !important;
+  padding: 15px;
+  max-width: 800px;
+  margin: 0 auto;
+  text-align: left;
+  color: #111 !important;
 }
 
 code,
@@ -66,23 +42,6 @@ pre,
 code *,
 pre * {
   font-family: "SF Mono", Monaco, "Cascadia Code", monospace !important;
-}
-
-html {
-  font-family: "Lato" !important;
-  line-height: 1.3em;
-  color: #111 !important;
-  font-size: 12px;
-}
-
-body {
-  font-family: "Lato" !important;
-  background: white !important;
-  padding: 15px;
-  max-width: 800px;
-  margin: 0 auto;
-  text-align: left;
-  color: #111 !important;
 }
 
 @media print {
@@ -99,7 +58,7 @@ body {
   h1 {
     font-size: 2rem;
     font-weight: 400 !important;
-    font-family: "Lato" !important;
+    font-family: "Inter", sans-serif !important;
     color: #880088;
     margin: 0 0 0.5em 0;
     border-bottom: 0.25pt solid #880088;
@@ -108,7 +67,7 @@ body {
   h2 {
     font-size: 1.5rem;
     font-weight: 400 !important;
-    font-family: "Lato" !important;
+    font-family: "Inter", sans-serif !important;
     color: #222;
     margin: 0.5em 0 0.5em 0;
     border-bottom: 0.5px solid #ccc;
@@ -117,7 +76,7 @@ body {
   h3 {
     font-size: 1.25rem;
     font-weight: 700 !important;
-    font-family: "Lato" !important;
+    font-family: "Inter", sans-serif !important;
     color: #808;
     border-bottom: 0.25px solid #808;
     padding: 1em 0 0.5em 0;
@@ -125,14 +84,14 @@ body {
   h4 {
     font-size: 1.25rem;
     font-weight: 700 !important;
-    font-family: "Lato" !important;
+    font-family: "Inter", sans-serif !important;
     color: #444;
     margin: 1em 0 0.1em 0;
   }
   h5 {
     font-size: 1rem;
     font-weight: 700 !important;
-    font-family: "Lato" !important;
+    font-family: "Inter", sans-serif !important;
     color: #808;
     margin: 24px 0 4px 0;
     padding-bottom: 0.25em;
@@ -140,7 +99,7 @@ body {
   h6 {
     font-size: 0.7rem;
     font-weight: 700 !important;
-    font-family: "Lato" !important;
+    font-family: "Inter", sans-serif !important;
     color: #222;
     margin: 1em 0 0.25em 0;
     padding-bottom: 0.25em;
@@ -159,6 +118,16 @@ body {
   ol li {
     margin: 0.2em 0;
   }
+  strong,
+  b {
+    font-weight: bold !important;
+    font-family: "Inter", sans-serif !important;
+  }
+  em,
+  i {
+    font-style: italic !important;
+    font-family: "Inter", sans-serif !important;
+  }
   blockquote {
     border-left: 4px solid #880088;
     background: #f2e6f2;
@@ -167,6 +136,16 @@ body {
     font-style: italic;
     color: #222;
     border-radius: 0 4px 4px 0;
+  }
+  blockquote strong,
+  blockquote b,
+  em strong,
+  em b,
+  i strong,
+  i b {
+    font-family: "Inter", sans-serif !important;
+    font-weight: bold !important;
+    font-style: italic !important;
   }
   a {
     color: #880088;
@@ -220,11 +199,11 @@ body {
   }
   table th {
     border-bottom: 0.25pt solid #999;
-    padding: 0.3em;
+    padding: 0.4em 0.2em;
   }
   table td {
     border-bottom: 0.25pt solid #ccc;
-    padding: 0.3em;
+    padding: 0.4em 0.2em;
     font-size: 0.9em;
   }
   .page-break {
@@ -271,7 +250,7 @@ body {
     margin: 0 !important;
     text-align: center !important;
     padding: 0 !important;
-    font: 600 0.75rem/1.2 "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !important;
+    font: 600 0.75rem/1.2 "Inter", sans-serif !important;
   }
   .live-site-shield {
     display: inline-block !important;
