refactor: Update PDF styling by adjusting font weights and colors for improved readability

--- a/assets/styles/pdf.scss
+++ b/assets/styles/pdf.scss
@@ -95,7 +95,7 @@ pre * {
 
   h1 {
     font-size: 4rem;
-    font-weight: 400 !important;
+    font-weight: 300 !important;
     font-family: "Inter", sans-serif !important;
     color: $feral;
     margin: 0 0 0.25em 0;
@@ -223,7 +223,7 @@ pre * {
     padding: 2px 4px;
     font-weight: 700;
     // color: #d73a49;
-    color: #a0a;
+    color: #808;
     font-size: 0.75em !important;
   }
 
