Comment out SVG icon dimensions in PDF styles

--- a/assets/styles/pdf.scss
+++ b/assets/styles/pdf.scss
@@ -272,8 +272,8 @@ pre * {
 
     // SVG icon styling
     &[src$=".svg"] {
-      width: 25px;
-      height: 25px;
+      // width: 25px;
+      // height: 25px;
       display: inline-block;
       vertical-align: middle;
     }
