--- a/assets/styles/pdf.scss
+++ b/assets/styles/pdf.scss
@@ -113,6 +113,21 @@ pre * {
     padding-top: 0.5em;
     padding-bottom: 0.25em;
     line-height: 1.1;
+    position: relative;
+
+    // Date/updated tags in headers
+    updated,
+    date {
+      float: right;
+      font-size: 0.32em; // 20% smaller than 0.4em
+      font-weight: 400;
+      color: var(--theme-color);
+      font-style: normal;
+      line-height: 1.2;
+      position: absolute;
+      right: 0;
+      bottom: 0.25em;
+    }
   }
 
   h2 {
@@ -123,6 +138,21 @@ pre * {
     margin: 0.5em 0 0.5em 0;
     border-bottom: 0.25pt solid var(--theme-color);
     padding: 0.75em 0 0.4em 0;
+    position: relative;
+
+    // Date/updated tags in headers
+    updated,
+    date {
+      float: right;
+      font-size: 0.4em; // 20% smaller than 0.5em
+      font-weight: 400;
+      color: var(--theme-color);
+      font-style: normal;
+      line-height: 1.2;
+      position: absolute;
+      right: 0;
+      bottom: 0.4em;
+    }
   }
 
   h3 {
@@ -132,6 +162,21 @@ pre * {
     color: var(--theme-color);
     border-bottom: 0.25px solid #ddd;
     padding: 1em 0 0.5em 0;
+    position: relative;
+
+    // Date/updated tags in headers
+    updated,
+    date {
+      float: right;
+      font-size: 0.48em; // 20% smaller than 0.6em
+      font-weight: 400;
+      color: var(--theme-color);
+      font-style: normal;
+      line-height: 1.2;
+      position: absolute;
+      right: 0;
+      bottom: 0.5em;
+    }
   }
 
   h4 {
