--- a/assets/styles/pdf.scss
+++ b/assets/styles/pdf.scss
@@ -23,6 +23,7 @@ $text: #222;
   --theme-color-light: #{$feral-lt};
   --theme-color-dark: #{$feral-dk};
   --theme-color-10: rgba(136, 0, 136, 0.1); // 10% opacity version of default feral color
+  --theme-color-05: rgba(136, 0, 136, 0.05); // 5% opacity version of default feral color
 }
 
 @page {
@@ -242,10 +243,9 @@ pre * {
 
   blockquote {
     border-left: 4px solid var(--theme-color);
-    background: var(--theme-color-10);
+    background: var(--theme-color-05);
     margin: 16px 0;
-    padding: 0.25em 0.5em;
-    font-style: italic;
+    padding: 0.5em 0.5em;
     color: $text;
     border-radius: 0 4px 4px 0;
   }
