--- a/assets/styles/pdf.scss
+++ b/assets/styles/pdf.scss
@@ -24,6 +24,8 @@ $text: #222;
   --theme-color-dark: #{$feral-dk};
   --theme-color-10: rgba(136, 0, 136, 0.1); // 10% opacity version of default feral color
   --theme-color-05: rgba(136, 0, 136, 0.05); // 5% opacity version of default feral color
+  --theme-color-primary: #880088; // Primary theme color
+  --theme-color-secondary: #444444; // Secondary theme color
 }
 
 @page {
@@ -108,9 +110,9 @@ pre * {
     font-size: 2.5rem;
     font-weight: 300 !important;
     font-family: "Inter", sans-serif !important;
-    color: var(--theme-color);
+    color: var(--theme-color-primary);
     margin: 0 0 0.75em 0;
-    border-bottom: 0.25pt solid var(--theme-color);
+    border-bottom: 0.25pt solid var(--theme-color-primary);
     padding-top: 0.5em;
     padding-bottom: 0.25em;
     line-height: 1.1;
@@ -121,8 +123,8 @@ pre * {
     date {
       float: right;
       font-size: 0.32em; // 20% smaller than 0.4em
-      font-weight: 400;
-      color: var(--theme-color);
+      font-weight: 500;
+      color: var(--theme-color-primary);
       font-style: normal;
       line-height: 1.2;
       position: absolute;
@@ -135,10 +137,10 @@ pre * {
     font-size: 1.75rem;
     font-weight: 600 !important;
     font-family: "Inter", sans-serif !important;
-    color: var(--theme-color);
-    margin: 0.5em 0 0.5em 0;
-    border-bottom: 0.25pt solid var(--theme-color);
-    padding: 0.75em 0 0.4em 0;
+    color: var(--theme-color-primary);
+    margin: 0.5em 0 0.25em 0 !important;
+    border-bottom: 0.25pt solid var(--theme-color-primary);
+    padding: 0.75em 0 0.25em 0;
     position: relative;
 
     // Date/updated tags in headers
@@ -147,7 +149,7 @@ pre * {
       float: right;
       font-size: 0.4em; // 20% smaller than 0.5em
       font-weight: 400;
-      color: var(--theme-color);
+      color: var(--theme-color-primary);
       font-style: normal;
       line-height: 1.2;
       position: absolute;
@@ -157,12 +159,13 @@ pre * {
   }
 
   h3 {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     font-weight: 600 !important;
     font-family: "Inter", sans-serif !important;
-    color: var(--theme-color);
-    border-bottom: 0.25px solid #ddd;
-    padding: 1em 0 0.5em 0;
+    color: var(--theme-color-secondary);
+    border-bottom: 0.25pt solid #aaa;
+    margin-bottom: 1em;
+    padding: 1em 0 0.1em 0;
     position: relative;
 
     // Date/updated tags in headers
@@ -171,7 +174,7 @@ pre * {
       float: right;
       font-size: 0.48em; // 20% smaller than 0.6em
       font-weight: 400;
-      color: var(--theme-color);
+      color: var(--theme-color-primary);
       font-style: normal;
       line-height: 1.2;
       position: absolute;
@@ -184,14 +187,14 @@ pre * {
     font-size: 1.25rem;
     font-weight: 600 !important;
     font-family: "Inter", sans-serif !important;
-    color: var(--theme-color);
+    color: var(--theme-color-secondary);
     margin: 1em 0 0.1em 0;
   }
   h5 {
     font-size: 1rem;
     font-weight: 800 !important;
     font-family: "Inter", sans-serif !important;
-    color: var(--theme-color);
+    color: var(--theme-color-primary);
     margin: 24px 0 4px 0;
     padding-bottom: 0.25em;
   }
@@ -200,7 +203,7 @@ pre * {
     font-size: 0.7rem;
     font-weight: 800 !important;
     font-family: "Inter", sans-serif !important;
-    color: var(--theme-color);
+    color: var(--theme-color-primary);
     margin: 1em 0 0.25em 0;
     padding-bottom: 0.25em;
     text-transform: uppercase;
@@ -242,10 +245,10 @@ pre * {
   }
 
   blockquote {
-    border-left: 4px solid var(--theme-color);
+    border-left: 4px solid var(--theme-color-primary);
     background: var(--theme-color-05);
-    margin: 16px 0;
-    padding: 0.5em 0.5em;
+    margin: 1.5em 0 !important;
+    padding: 0.5em 1em;
     color: $text;
     border-radius: 0 4px 4px 0;
   }
@@ -263,7 +266,7 @@ pre * {
   }
 
   a {
-    color: var(--theme-color);
+    color: var(--theme-color-primary);
     text-decoration: none;
     font-weight: 700;
   }
@@ -279,7 +282,7 @@ pre * {
     padding: 2px 4px;
     font-weight: 700; // Keep inline code at current weight
     // color: #d73a49;
-    color: var(--theme-color);
+    color: var(--theme-color-primary);
     font-size: 0.75em !important;
   }
 
@@ -347,6 +350,18 @@ pre * {
       padding: 0.4em 0.2em;
       font-size: 0.9em;
     }
+  }
+
+  // -------------------------------------------------------------------------
+  // FOOTNOTES - Styling for footnotes section
+  // -------------------------------------------------------------------------
+
+  section[data-footnotes] {
+    border-top: none !important;
+  }
+
+  section[data-footnotes] h2 {
+    display: none !important;
   }
 
   // -------------------------------------------------------------------------
@@ -448,7 +463,7 @@ pre * {
     }
 
     .url {
-      background: var(--theme-color) !important;
+      background: var(--theme-color-primary) !important;
       color: #ffffff !important;
       padding: 5px 7px !important;
       font-weight: bold !important;
